--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Valentine</title>
+    <title>PujaRak</title>
 </head>
 
 <body>
     <div class="container">
         <div class="Mainprompt">
-            <img class="image" src="images/catflower.jpg"></img>
-            <h1 class="hh" id="name">Hey beautiful!</h1>
+            <img class="image" src="images/puja.jpg"></img>
+            <h1 class="hh" id="name">Hey Pujaa!</h1>
             <p class="pp" id="question">Will you be my Valentine?</p>
             <div class="buttons">
                 <button id="no-button" onclick="showMessage('No')">No</button>
