Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="Mainprompt">
-            <img class="image" src="images/puja.jpg"></img>
+            <img class="image" src="puja.jpg"></img>
             <h1 class="hh" id="name">Hey Pujaa!</h1>
             <p class="pp" id="question">Will you be my Valentine?</p>
             <div class="buttons">
